components/default/garage-s3/http-route.yaml
---
# S3 API endpoint
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3-api
  labels:
    app.kubernetes.io/instance: garage-s3
    app.kubernetes.io/name: garage-s3
  annotations:
    gethomepage.dev/href: "https://s3.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/garage.png
    gethomepage.dev/name: "Garage S3"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["s3.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: garage-s3
          port: 3900
---
# Web UI endpoint
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3-ui
  labels:
    app.kubernetes.io/instance: garage-s3
    app.kubernetes.io/name: garage-s3
  annotations:
    gethomepage.dev/href: "https://garage.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/garage.png
    gethomepage.dev/name: "Garage UI"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["garage.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: garage-s3
          port: 3909
